[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Pause.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1040.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="HBoxContainer"]
margin_right = 440.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PauseButton" type="Button" parent="HBoxContainer"]
margin_left = 444.0
margin_right = 596.0
margin_bottom = 64.0
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 600.0
margin_right = 1040.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PopupDialog" type="PopupDialog" parent="."]
pause_mode = 2
visible = true
margin_right = 585.0
margin_bottom = 585.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PopupDialog"]
margin_right = 585.0
margin_bottom = 585.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="PopupDialog/HBoxContainer"]
margin_right = 188.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupDialog/HBoxContainer"]
margin_left = 192.0
margin_right = 392.0
margin_bottom = 585.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PopupDialog/HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 115.0
text = "Pause
"
align = 1

[node name="ResumeButton" type="Button" parent="PopupDialog/HBoxContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 200.0
margin_bottom = 181.0
text = "Resume"

[node name="RestartButton" type="Button" parent="PopupDialog/HBoxContainer/VBoxContainer"]
margin_top = 185.0
margin_right = 200.0
margin_bottom = 247.0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="PopupDialog/HBoxContainer/VBoxContainer"]
margin_top = 251.0
margin_right = 200.0
margin_bottom = 313.0
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control6" type="Control" parent="PopupDialog/HBoxContainer/VBoxContainer"]
margin_top = 317.0
margin_right = 200.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control4" type="Control" parent="PopupDialog/HBoxContainer"]
margin_left = 396.0
margin_right = 585.0
margin_bottom = 585.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HBoxContainer/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="popup_hide" from="PopupDialog" to="." method="_on_PopupDialog_popup_hide"]
[connection signal="pressed" from="PopupDialog/HBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PopupDialog/HBoxContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="PopupDialog/HBoxContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
